--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="arabic">arabic</string>
     <string name="english">English</string>
     <string name="cancel">Cancel</string>
+    <string name="ex_product_name">Full product name</string>
+    <string name="ex_unit_amount">1 יחידה / 150 גרם</string>
 </resources>
