--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -51,4 +51,6 @@
     <string name="arabic">arabic</string>
     <string name="english">English</string>
     <string name="cancel">cancel</string>
+    <string name="ex_product_name">שם המוצר המלא</string>
+    <string name="ex_unit_amount">1 יחידה / 150 גרם</string>
 </resources>
