--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="plus_icon">plus icon</string>
     <string name="minus_icon">minus icon</string>
     <string name="_1">1</string>
+    <string name="self_search">self search</string>
 </resources>
