--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -58,4 +58,5 @@
     <string name="plus_icon">אייקון פלוס</string>
     <string name="minus_icon">אייקון מינוס</string>
     <string name="_1">1</string>
+    <string name="self_search">חיפוש עצמי</string>
 </resources>
