feat: Add ex_calories string and update self_search capitalization
This commit adds a new string resource, `ex_calories`, with the value "275".

Additionally, it updates the capitalization of the `self_search` string from "self search" to "Self Search".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="plus_icon">plus icon</string>
     <string name="minus_icon">minus icon</string>
     <string name="_1">1</string>
-    <string name="self_search">self search</string>
+    <string name="self_search">Self Search</string>
+    <string name="ex_calories">275</string>
 </resources>
