--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="_1">1</string>
     <string name="self_search">Self Search</string>
     <string name="ex_calories">275</string>
+    <string name="type_product">הקלד מוצר</string>
 </resources>
