--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -60,4 +60,5 @@
     <string name="_1">1</string>
     <string name="self_search">חיפוש עצמי</string>
     <string name="ex_calories">275</string>
+    <string name="type_product">הקלד מוצר</string>
 </resources>
