feat: Add and update string resources
This commit introduces two new string resources: `edit_amount` and `ex_description`.

It also updates the `type_product` string from "הקלד מוצר" to "Type Product Name" for localization.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,7 @@
     <string name="_1">1</string>
     <string name="self_search">Self Search</string>
     <string name="ex_calories">275</string>
-    <string name="type_product">הקלד מוצר</string>
+    <string name="type_product">Type Product Name</string>
+    <string name="edit_amount">Edit Amount</string>
+    <string name="ex_description">Additional description or product info</string>
 </resources>
