--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,6 @@
     <string name="type_product">Type Product Name</string>
     <string name="edit_amount">Edit Amount</string>
     <string name="ex_description">Additional description or product info</string>
+    <string name="not_what_you_looked_for">לא מה שחיפשת?</string>
+    <string name="continue_self_search">המשך בחיפוש עצמי</string>
 </resources>
