--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="space">\" \"</string>
     <string name="blank_">-</string>
     <string name="remaining_calories">Remaining</string>
+    <string name="tue_18">Tue 18</string>
+    <string name="thu_20">Thu 20</string>
+    <string name="product_not_found_message">Oops! \n ~This product does not exist in the system~ \n ↓ Continue with self search ↓</string>
 </resources>
