feat: Add Hebrew translations for dates and messages
This commit adds new string resources for the Hebrew (iw) localization. It includes translations for "tue_18", "thu_20", and a "product_not_found_message".

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -65,4 +65,7 @@
     <string name="space">\" \"</string>
     <string name="blank_">-</string>
     <string name="remaining_calories">קלוריות נשארו</string>
+    <string name="tue_18">שלישי 18</string>
+    <string name="thu_20">חמישי 20</string>
+    <string name="product_not_found_message">אופס! \n ~מוצר זה לא קיים במערכת~ \n ↓ המשך בחיפוש עצמי ↓</string>
 </resources>
