feat: Add `catalog_icon` string resource
This commit adds a new string resource named `catalog_icon` to be used for content descriptions, likely for an icon representing a catalog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="tue_18">Tue 18</string>
     <string name="thu_20">Thu 20</string>
     <string name="product_not_found_message">Oops! \n ~This product does not exist in the system~ \n ↓ Continue with self search ↓</string>
+    <string name="catalog_icon">catalog icon</string>
 </resources>
