feat: Add catalog_icon string resource
This commit adds a new string resource named `catalog_icon` to the `strings.xml` file for the Hebrew (iw) locale.

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -68,4 +68,5 @@
     <string name="tue_18">שלישי 18</string>
     <string name="thu_20">חמישי 20</string>
     <string name="product_not_found_message">אופס! \n ~מוצר זה לא קיים במערכת~ \n ↓ המשך בחיפוש עצמי ↓</string>
+    <string name="catalog_icon">catalog icon</string>
 </resources>
