--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="remaining_calories">Remaining</string>
     <string name="tue_18">Tue 18</string>
     <string name="thu_20">Thu 20</string>
-    <string name="product_not_found_message">Oops! \n ~This product does not exist in the system~ \n ↓ Continue with self search ↓</string>
     <string name="catalog_icon">catalog icon</string>
+    <string name="product_not_found_title">This product does not exist in the system yet</string>
+    <string name="product_not_found_subtext">Continue with self search</string>
 </resources>
