refactor(strings): Update product_not_found message
This commit refactors the string resources for the "product not found" message in the Hebrew language pack (`values-iw`).

The single `product_not_found_message` string is split into `product_not_found_title` and `product_not_found_subtext` for better structure and clarity.

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -67,6 +67,7 @@
     <string name="remaining_calories">קלוריות נשארו</string>
     <string name="tue_18">שלישי 18</string>
     <string name="thu_20">חמישי 20</string>
-    <string name="product_not_found_message">אופס! \n ~מוצר זה לא קיים במערכת~ \n ↓ המשך בחיפוש עצמי ↓</string>
-    <string name="catalog_icon">catalog icon</string>
+     <string name="catalog_icon">catalog icon</string>
+    <string name="product_not_found_title" >מוצר זה עוד לא קיים במערכת</string>
+    <string name="product_not_found_subtext" >המשך בחיפוש עצמי</string>
 </resources>
