--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -70,4 +70,5 @@
      <string name="catalog_icon">catalog icon</string>
     <string name="product_not_found_title" >מוצר זה עוד לא קיים במערכת</string>
     <string name="product_not_found_subtext" >המשך בחיפוש עצמי</string>
+    <string name="empty_state_icon_desc" />
 </resources>
