--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="calories">Calories</string>
     <string name="save_product">Save Product</string>
     <string name="add_product">Add Product</string>
-    <string name="add_self_calorie_value">Add Self Calorie Value</string>
+    <string name="add_fast_calorie_value">Add Fast Calorie Value</string>
     <string name="move_to_custom_product_view">Continue to Add Product</string>
     <string name="add_dotan_self_product">Add Dotan items to personal cart</string>
     <string name="today">Today</string>
@@ -72,4 +72,5 @@
     <string name="product_not_found_title">This product does not exist in the system yet</string>
     <string name="product_not_found_subtext">Continue with self search</string>
     <string name="empty_state_icon_desc" />
+    <string name="fast_add">Fast add</string>
 </resources>
