--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -20,7 +20,7 @@
     <string name="calories">קלוריות</string>
     <string name="save_product">שמור מוצר</string>
     <string name="add_product">הוספת מוצר</string>
-    <string name="add_self_calorie_value">הוסף ערך קלורי עצמי</string>
+    <string name="add_fast_calorie_value">הוסף ערך קלורי מהיר</string>
     <string name="move_to_custom_product_view">המשך להוספת מוצר</string>
     <string name="add_dotan_self_product">הוספת פריטים של דותן לסל האישי</string>
     <string name="today">היום</string>
@@ -67,8 +67,9 @@
     <string name="remaining_calories">קלוריות נשארו</string>
     <string name="tue_18">שלישי 18</string>
     <string name="thu_20">חמישי 20</string>
-     <string name="catalog_icon">catalog icon</string>
+     <string name="catalog_icon">אייקון קטלוג</string>
     <string name="product_not_found_title" >מוצר זה עוד לא קיים במערכת</string>
     <string name="product_not_found_subtext" >המשך בחיפוש עצמי</string>
     <string name="empty_state_icon_desc" />
+    <string name="fast_add">הוספה מהירה</string>
 </resources>
