feat: Add new string resources for search
This commit adds the following new string resources:
- `new_product`
- `search_suggestion`
- `search_in_web`

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
     <string name="product_not_found_subtext">Continue with self search</string>
     <string name="empty_state_icon_desc" />
     <string name="fast_add">Fast add</string>
+    <string name="new_product">New Product</string>
+    <string name="search_suggestion">Search Suggestion</string>
+    <string name="search_in_web">Search in Web..</string>
 </resources>
