feat: Add custom_products string resource
This commit introduces a new string resource `custom_products` to support custom product features.

The string has been added for both English and Hebrew (`iw`) localizations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="new_product">New Product</string>
     <string name="search_suggestion">Search Suggestion</string>
     <string name="search_in_web">Search in Web..</string>
+    <string name="custom_products">Custom Products</string>
 </resources>
