--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -75,4 +75,5 @@
     <string name="new_product">מוצר חדש</string>
     <string name="search_suggestion">הצעה לחיפוש</string>
     <string name="search_in_web">חיפוש באתר</string>
+    <string name="custom_products">" מוצרים מעוצבים"</string>
 </resources>
